--- a/Monsters-android/.classpath
+++ b/Monsters-android/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/Monsters"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="lib" path="/Monsters/libs/gdx.jar" sourcepath="/Monsters/libs/gdx-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="C:/Users/Oliver/Downloads/libgdx-0.9.9/gdx-backend-android.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Oliver/Downloads/libgdx-0.9.9/gdx.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
