--- a/Monsters-desktop/.classpath
+++ b/Monsters-desktop/.classpath
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Monsters"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/Monsters"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar" sourcepath="libs/gdx-backend-lwjgl-sources.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Oliver/Downloads/libgdx-0.9.9/gdx-backend-lwjgl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Oliver/Downloads/libgdx-0.9.9/gdx-backend-lwjgl-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Oliver/Downloads/libgdx-0.9.9/gdx-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Oliver/Downloads/libgdx-0.9.9/gdx.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Oliver/Downloads/libgdx-0.9.9/docs/api/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
